-
Type:
Bug
-
Status: Resolved
-
Priority:
Major
-
Resolution: Fixed
-
Fix Version/s: 0.4.15
-
Component/s: Drivers: Filesystems
-
Labels:
-
Module:
Somebody should go through the function and fix these things there:
- ReturnedInformation is not initialized in many cases (especially on error code paths)
- ReturnedInformation is set to 0 in many cases which is FILE_SUPERSEDED. Need to check if that was intended
- if there was an exception inside outer SEH, it returns STATUS_SUCCESS (look at drivers/filesystems/udfs/create.cpp:2231)
- (optional) the outer SEH may be reduced - not need to wrap the whole function inside it
- relates to
-
CORE-16174 UDFCommonCreate uninitialized var used
-
- Resolved
-