[UDFS] UDFCommonCreate returns uninitialized or wrong data. CORE-16623